# docs/swagger.json
@@ -40,13 +40,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
@@ -75,19 +75,19 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
             }
         },
-        "/api/collection-item": {
+        "/api/collection-category": {
             "get": {
                 "description": "获取分页列表",
                 "consumes": [
@@ -115,13 +115,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
@@ -142,7 +142,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/collection.CreateItemService"
+                            "$ref": "#/definitions/category.CreateItemService"
                         }
                     }
                 ],
@@ -150,19 +150,19 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
             }
         },
-        "/api/collection-item/{id}": {
+        "/api/collection-category/{id}": {
             "get": {
                 "description": "通过id获取信息",
                 "consumes": [
@@ -185,13 +185,13 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
@@ -219,7 +219,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/collection.UpdateItemService"
+                            "$ref": "#/definitions/category.UpdateItemService"
                         }
                     }
                 ],
@@ -227,13 +227,13 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
@@ -260,13 +260,13 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
@@ -295,13 +295,13 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
@@ -337,13 +337,13 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
@@ -370,13 +370,13 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     },
                     "400": {
                         "description": "失败",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/global.Response"
                         }
                     }
                 }
@@ -494,7 +494,27 @@
         }
     },
     "definitions": {
-        "collection.CreateItemService": {
+        "category.CreateItemService": {
+            "type": "object",
+            "properties": {
+                "collectionId": {
+                    "type": "string"
+                },
+                "cover": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "category.UpdateItemService": {
             "type": "object",
             "properties": {
                 "collectionId": {
@@ -522,26 +542,6 @@
                 }
             }
         },
-        "collection.UpdateItemService": {
-            "type": "object",
-            "properties": {
-                "collectionId": {
-                    "type": "string"
-                },
-                "cover": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "collection.UpdateService": {
             "type": "object",
             "properties": {
@@ -550,7 +550,7 @@
                 }
             }
         },
-        "dto.Response": {
+        "global.Response": {
             "type": "object",
             "properties": {
                 "data": {
